# coverletter_wiz

./: .gitignore  CHANGELOG.md  ENV_SETUP.md  README.md  activate_env.sh  categories.yaml  category_expansions.yaml  cover_letter_matcher.py  coverletter  coverletter_cli.py  coverletter_wiz.py  deja_write.py  environment_info.txt  ideas for later.md  job_analyzer.py  local-llm-test.py  migrate_ratings.py  pyproject.toml  readme.md  requirements.txt  sentence_rater.py  setup.py  spacy_utils.py  test_sentence_grouping.py
coverletter_wiz/: README.md  __main__.py
coverletter_wiz/cli/: analyze_job.py  match_content.py  process_text.py  rate_content.py
coverletter_wiz/core/: content_matcher.py  content_processor.py  job_analyzer.py  text_processor.py
coverletter_wiz/utils/: spacy_utils.py
json_archives/: migrate_ratings.py
scripts/: bump_version.py
src/: __init__.py  __main__.py  config.py  requirements.txt
src/cli/: analyze_job.py  export_content.py  generate_report.py  match_content.py  process_content.py  process_text.py  rate_content.py  rate_content_unified.py
src/core/: content_matcher.py  content_processor.py  data_manager.py  job_analyzer.py  text_processor.py
src/utils/: __init__.py  diff_utils.py  html_utils.py  ollama_utils.py  spacy_utils.py
tests/: run_tests.py  test_config.py  test_content_matcher.py  test_content_processor.py  test_data_integration.py  test_data_manager.py  test_data_privacy.py  test_html_utils.py  test_job_analyzer.py  test_project_structure.py  test_report_job_analysis.py  test_report_url_integration.py
